--- a/app/assets/templates/forms/text.jst.ejs
+++ b/app/assets/templates/forms/text.jst.ejs
@@ -8,7 +8,7 @@
         <input
           type="text"
           name="title"
-          id="title"
+          id="title"-
           placeholder="Enter title..">
       </div>
 
