--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -18,9 +18,20 @@
 	</div>
 
 	<div class="post-bottom-bar">
-			<button class="reblog-btn">Reblog!</button>
-			<button class="like-btn">Like!</button>
-			<button class="unlike-btn">Unlike!</button>
+		<a href="javascript:void(0)" class="notes-display">
+			<%= this.post.notes().length %> note<% if (this.post.notes().length > 1) { %>s<% } %>
+		</a>
+		<div class="notes-display">
+			<div class="notes-arrow"></div>
+			<div class="notes-list">
+				<% this.post.notes().each(function(note) { %>
+					<li><%= note.get('render') %></li>
+				<% }) %>
+				<% console.log(this.post) %>
+			</div>
+		</div>
+		<button class="reblog-btn">Reblog</button>
+		<button class="like-btn"><%= String.fromCharCode(9825) %></button>
 	</div>
 
 </div>
