--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,10 @@
 	  <%= csrf_meta_tags %>
 	</head>
 	<body>
-		<script> window.current_user_id = <%= !!current_user ? current_user.id : 'false' %> </script>
+		<script>
+			window.current_user_id = <%= !!current_user ? current_user.id : 'false' %>;
+			filepicker.setKey("<%= ENV['FILEPICKER_API_KEY'] %>")
+		</script>
 		<nav class="topbar"></nav>
 
 		<main class="group">
