--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,6 +5,7 @@
 				<li id="home-link"><a href="<%= posts_url %>"><%= image_tag("logo.png", height: "50") %></a></li>
 			<% end %>
 			<% unless !current_user %>
+				<li id="blog-settings-li"><%= link_to "Settings", edit_blog_url(current_blog) %></li>
 				<li id="blog-li">Logged in as: <%= link_to current_user.email, posts_url %> - <%= link_to 'Log Out', session_url,  method: :delete %></li>
 				<li id="blogs-list-li"><a href="<%= blogs_url %>">Find New Blogs!</a></li>
 			<% end %>
