--- a/app/assets/templates/posts/index.jst.ejs
+++ b/app/assets/templates/posts/index.jst.ejs
@@ -13,5 +13,12 @@
       </ul>
     </div>
   </div>
-<section class="posts-space"></section>
+  <section class="posts-space">
+    <div class="container">
+      <div class="new-post-form">
+        <div id="input-arrow"></div>
+        <div class="form-space"></div>
+      </div>
+    </div>
+  </section>
 </div>
