--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 	<body>
 		<script>
 			window.current_user_id = <%= !!current_user ? current_user.id : 'false' %>;
-			filepicker.setKey("<%= ENV['FILEPICKER_API_KEY'] %>")
+			filepicker.setKey("<%= ENV['FILEPICKER_RAILS_API_KEY'] %>")
 		</script>
 		<nav class="topbar"></nav>
 
