--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,6 +3,7 @@
 		<ul>
 			<% unless request.env['PATH_INFO'] == (new_session_path || new_user_path) %>
 				<li id="home-link"><a href="<%= posts_url %>"><%= image_tag("logo.png", height: "50") %></a></li>
+				<li id="backbone-link"><a href="/backbone">Backbone!</a>
 			<% end %>
 			<% unless !current_user %>
 				<li id="blog-settings-li"><%= link_to "Settings", edit_blog_url(current_blog) %></li>
