Specified validations based on post type. All post types are now created and rendered differently. Spritesheet made and implemented.

--- a/app/assets/templates/forms/video.jst.ejs
+++ b/app/assets/templates/forms/video.jst.ejs
@@ -1,14 +1,8 @@
 <form class="new-post-form-inputs">
   <div class="input-group" id="image-entry-div">
-    <label for="youtube">Search for a video on Youtube</label>
-    <button id="youtube">Upload</button>
-  </div>
-
-  <p>OR</p>
-
-  <div class="input-group" id="image-entry-div">
-    <label for="image-url">Enter youtube URL</label>
-    <input type="text" name="url" id="image-url" placeholder="URL">
+    <label for="image-url">Enter youtube url
+<div class="viewport youtubeLogo"><img src="<%= Troopr.spriteUrl %>" class="sprite youtubeLogo"></img></div></label>
+    <input type="text" name="url" id="image-url" placeholder="Video ID">
   </div>
 
   <div class="input-group" id="body-div">
