--- a/app/assets/templates/shared/navbar.jst.ejs
+++ b/app/assets/templates/shared/navbar.jst.ejs
@@ -1,4 +1,4 @@
 <ul>
-  <li class="home-link"><a href="javascript:void(0)">Home</a>
-  <!-- <img src="/assets/images/logo.png" height="50" /> -->
+  <li class="home-link"><a href="javascript:void(0)">
+  </a>
 </ul>
