--- a/app/views/backbone/index.html.erb
+++ b/app/views/backbone/index.html.erb
@@ -1,6 +1,8 @@
 <div class="backbone">
 </div>
 <script>
+  Troopr.spriteUrl = "<%= image_url('spritesheet.png') %>"
+
 $(document).ready(function(){
   Troopr.initialize();
 });
