--- a/app/assets/templates/posts/photo.jst.ejs
+++ b/app/assets/templates/posts/photo.jst.ejs
@@ -41,7 +41,12 @@
         <% }) %>
       </div>
     </div>
-    <button class="reblog-btn" data-post-id="<%= post.get('id') %>">Reblog</button>
-    <button class="like-btn"data-post-id="<%= post.get('id') %>"><%= String.fromCharCode(9825) %></button>
+    <div class="viewport reblog">
+      <img src="<%= Troopr.spriteUrl %>" class="reblog sprite"></img>
+    </div>
+    <% var liked= ((post.get('is_liked')) ? "liked" : "unliked") %>
+    <div class="viewport liked">
+      <img src="<%= Troopr.spriteUrl %>" class="<%= liked %> sprite"></img>
+    </div>
   </div>
 </div>
