--- a/app/assets/templates/forms/audio.jst.ejs
+++ b/app/assets/templates/forms/audio.jst.ejs
@@ -17,7 +17,11 @@
   </iframe>
 
   <div class="input-group" id="image-entry-div">
-    <input type="text" name="url" id="audio-url" placeholder="Audio Stream URL" disabled="true">
+    <input type="text"
+      id="audio-url"
+      placeholder="Audio Stream URL"
+      disabled="true">
+    <input type="hidden" name="url" id="audio-url">
   </div>
 
   <div class="search-results">
