--- a/app/assets/templates/forms/video.jst.ejs
+++ b/app/assets/templates/forms/video.jst.ejs
@@ -1,6 +1,6 @@
 <form class="new-post-form-inputs">
   <div class="input-group" id="image-entry-div">
-    <label for="image-url">Enter youtube url
+    <label for="image-url">Enter YouTube url
 <div class="viewport youtubeLogo"><img src="<%= Troopr.spriteUrl %>" class="sprite youtubeLogo"></img></div></label>
     <input type="text" name="url" id="image-url" placeholder="Video ID">
   </div>
