--- a/app/assets/templates/shared/navbar.jst.ejs
+++ b/app/assets/templates/shared/navbar.jst.ejs
@@ -1,4 +1,12 @@
 <ul>
-  <li class="home-link"><a href="javascript:void(0)">
-  </a>
+  <li class="home-link">
+    <a href="javascript:void(0)">
+      <div class="viewport logo-white">
+        <img src="<%= Troopr.spriteUrl %>" class="sprite logo-white">
+      </div>
+    </a>
+  </li>
+
+
+  <li id="blog-li">Currently logged in as:</li>
 </ul>
