--- a/app/views/blogs/_blog_header.html.erb
+++ b/app/views/blogs/_blog_header.html.erb
@@ -1,4 +1,4 @@
-<div class="blog-intro-div group">
+<div class="blog-intro-div">
 <figure class="blog-image-fig"><a href="<%= blog_url(blog) %>">
 <% if blog.filepicker_url %>
 	<%= filepicker_image_tag blog.filepicker_url, w:100, h:100, fit: 'clip'	%>
