--- a/app/assets/templates/forms/photo.jst.ejs
+++ b/app/assets/templates/forms/photo.jst.ejs
@@ -1,11 +1,9 @@
 <form class="new-post-form-inputs">
   <div class="input-group" id="image-entry-div">
-    <label for="filepicker">Upload image with Filepicker.io</label>
-<button id="filepicker">Upload</button>
-
+    <label for="filepicker">Upload/Find image with Filepicker.io</label>
+<button class="filepicker">Filepicker</button>
   </div>
-
-  <p>OR</p>
+  <br>
 
   <div class="input-group" id="image-entry-div">
     <label for="image-url">Enter image URL</label>
