--- a/app/assets/templates/forms/text.jst.ejs
+++ b/app/assets/templates/forms/text.jst.ejs
@@ -16,5 +16,6 @@
       placeholder="Real cool description, nerd."></textarea>
   </div>
 
+  <input type="hidden" name="post_type" value="text">
   <button class="submit-btn" type="submit">Submit</button>
 </form>
