--- a/app/assets/templates/posts/index.jst.ejs
+++ b/app/assets/templates/posts/index.jst.ejs
@@ -1,6 +1,8 @@
 <div class="content-space">
   <div class="dash group">
-    <figure class="blog-avatar"></figure>
+    <figure class="blog-avatar">
+      <img src="<%= Troopr.currentBlog.get('filepicker_url') %>" width="64">
+    </figure>
     <div class="dash-post-panel">
       <ul class="dash-post-buttons">
         <a href-"javascript:void(0)" id="text-btn" data-content="text"><p>Text</p></a>
